# riftwm

./: .gitignore  .xinitrc  CMakeLists.txt  LICENSE  README.md  kinect.c  kinect.cc  kinect.h  linmath.h  renderer.c  renderer.cc  renderer.h  riftwm.c  riftwm.h  run-xinit.sh
shader/: warp.fs.glsl  warp.fs.glsl.h  warp.vs.glsl  warp.vs.glsl.h
